--- a/config.json
+++ b/config.json
@@ -8,7 +8,7 @@
                 "name": "pnc"
             },
             {
-                "name": "~matt"
+                "name": "~ben"
             }
     ]
 }
