--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "credentialId": "jenkins-service",
+    "credentialId": "62bbdfb9-a435-417e-8325-d90756d62d93",
     "bitbucketUrl": "http://bitbucket.liatr.io",
     "pipelineLibrary": "https://github.com/liatrio/pipeline-library",
     "gitRepos": [],
