pnc-100 adding a new project to list of git projects

--- a/config.json
+++ b/config.json
@@ -11,6 +11,9 @@
             },
             {
                 "name": "FFA"
+            },
+            {
+                "name": "anotherProject"
             }
     ]
 }
